apps/staging/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.26.2.10099-ls276
          resources:
            requests:
              cpu: 10m
              memory: 170Mi
            limits:
              memory: 400Mi
          volumeMounts:
            - name: radarr-config
              mountPath: /config
              subPath: radarr/config
            - name: radarr-data
              mountPath: /movies
              subPath: media/movies
            - name: radarr-data
              mountPath: /downloads
              subPath: media/downloads
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: radarr-data
          persistentVolumeClaim:
            claimName: jellyfin-data-pvc
      securityContext:
        runAsUser: 995
        runAsGroup: 501
        fsGroup: 501
        fsGroupChangePolicy: "OnRootMismatch"
